@@ -1,15 +1,26 @@
 package com.example.indoor.service;
 
+import com.example.indoor.controller.ProductController;
 import com.example.indoor.controller.form.ProductForm;
 import com.example.indoor.controller.form.SearchForm;
 import com.example.indoor.controller.form.ProductForm;
 import com.example.indoor.entity.Product;
 import com.example.indoor.mapper.ProductMapper;
 import com.example.indoor.mapper.StockNoticeMapper;
+import io.micrometer.common.util.StringUtils;
 import org.springframework.beans.BeanUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import org.springframework.web.multipart.MultipartFile;
 
+import java.io.IOException;
+import java.io.OutputStream;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.nio.file.StandardOpenOption;
+import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.List;
 
@@ -22,8 +33,9 @@ public class ProductService {
     @Autowired
     StockNoticeMapper stockNoticeMapper;
 
-    final String NO_IMAGE_FILE_PATH = "/img/no-image.png";
-
+    public final String NO_IMAGE_FILE_PATH = "/img/no-image.png";
+    public final String PRODUCT_IMAGE_PATH = "./src/main/resources/static/img/product/";
+    public final String IMAGE_RELATIVE_PATH = "/img/product/";
 
     /*
      * 出品送品一覧を取得
@@ -51,13 +63,13 @@ public class ProductService {
 
         for (Product entity : entities) {
             ProductForm form = new ProductForm();
-            BeanUtils.copyProperties(entity, form);
             // ファイルパスを修正
-            if (form.getImagePass().isBlank()) {
-                form.setImagePass(NO_IMAGE_FILE_PATH);
+            if (StringUtils.isBlank(entity.getImagePass())) {
+                entity.setImagePass(NO_IMAGE_FILE_PATH);
             } else {
-                form.setImagePass("/img/product/" + form.getImagePass());
+                entity.setImagePass(IMAGE_RELATIVE_PATH + entity.getImagePass());
             }
+            BeanUtils.copyProperties(entity, form);
             forms.add(form);
         }
         return forms;
@@ -87,6 +99,15 @@ public class ProductService {
      */
     private Product setProductEntity(ProductForm form){
         Product entity = new Product();
+        // ファイルパスを修正
+        if (StringUtils.isBlank(form.getImagePass()) || form.getImagePass().equals(NO_IMAGE_FILE_PATH)) {
+            form.setImagePass(null);
+        } else {
+            int pathIndex = form.getImagePass().lastIndexOf(IMAGE_RELATIVE_PATH);
+            if (pathIndex >= 0) {
+                form.setImagePass(form.getImagePass().substring(IMAGE_RELATIVE_PATH.length()).toLowerCase());
+            }
+        }
         BeanUtils.copyProperties(form, entity);
         return entity;
     }
@@ -102,5 +123,31 @@ public class ProductService {
         List<Product> results = productMapper.findAll(searchForm);
         List<ProductForm> productForms = setForm(results);
         return productForms;
+    }
+    // ファイルをサーバーに保存
+    public void saveFile(MultipartFile file, String fileName) throws IOException {
+        Path uploadFile = Paths.get(PRODUCT_IMAGE_PATH + fileName);
+        try (OutputStream os = Files.newOutputStream(uploadFile, StandardOpenOption.CREATE)) {
+            byte[] bytes = file.getBytes();
+            os.write(bytes);
+        } catch (IOException e) {
+            //エラー処理は省略
+        }
+    }
+    //　ファイル名にタイムスタンプを付与
+    public String getUploadFileName(String fileName) {
+
+        return fileName + "_" +
+                DateTimeFormatter.ofPattern("yyyyMMddHHmmssSSS")
+                        .format(LocalDateTime.now())
+                + getExtension(fileName);
+    }
+    // ファイルの拡張子を取得
+    private String getExtension(String filename) {
+        int dot = filename.lastIndexOf(".");
+        if (dot > 0) {
+            return filename.substring(dot).toLowerCase();
+        }
+        return "";
     }
 }
